--- a/card_focus/cards.html
+++ b/card_focus/cards.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="cards.css">
         <!--
             note it's important here that we're using the defer tag
